--- a/src/components/SponsorDisplay/index.css
+++ b/src/components/SponsorDisplay/index.css
@@ -2,14 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    padding: 50px;
-    margin: 0px 30px
+    padding: 5px;
+    margin: 0px 10px
   }
   
   .sponsor {
     margin-bottom: 10px;
     border-bottom: 1px solid #ccc; 
-    padding-bottom: 20px;
+    padding-bottom: 10px;
   }
   
   .sponsor:last-child {
@@ -26,7 +26,7 @@
   .sponsor-logo {
     width: 100px; 
     height: auto; 
-    margin-right: 30px;
+    margin-right: 10px;
   }
   
   .sponsor-name {
@@ -34,6 +34,8 @@
   }
   
   .sponsor-program {
-    margin-left: 20px;
+    margin-left: 10px;
+    font-size: small;
   }
+  
   
