--- a/src/components/VideoSection/index.css
+++ b/src/components/VideoSection/index.css
@@ -69,9 +69,9 @@ html, body {
   color: #333; /* Button text color */
   border: solid; 
   border-width: 0.15cap; 
-  padding: 30px 50px; /* Adjust padding as needed */
-  font-size: 30px; /* Adjust font size as needed */
-  font-weight: 600;
+  padding: 20px 30px; /* Adjust padding as needed */
+  font-size: 120%; /* Adjust font size as needed */
+  font-weight: 700;
   cursor: pointer;
   border-radius: 15px; /* Add rounded corners */
   transition: background-color 0.3s; /* Add a smooth transition effect on hover */
