--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -72,3 +72,10 @@
 .contact-info a{
   color: white;
 }
+.ri-twitter-x-fill{
+  font-size: 20px;
+}
+
+.ri-facebook-circle-fill{
+  font-size: 25px;
+}
