--- a/src/components/MapComponent/index.css
+++ b/src/components/MapComponent/index.css
@@ -89,7 +89,8 @@
   .form-text{
 
     text-align: left;
-    text-align: justify;
+    text-align:justify;
+    word-spacing: 5px;
     margin-bottom: 20px;
     font-size: 20px;
   }
