--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,16 @@ body, html {
   color: #fff; /* Light text color for contrast */
   font-family: 'Arial', sans-serif; /* Optional: Set a default font */
 }
-
+#logo{
+  height: 120px;
+  margin-right: 10px;
+  margin-left: 50px;
+  position: relative;
+  width: auto;
+}
+#cyano-heading{
+  margin-top: 10px;
+}
 #title-heading{
   margin-bottom: 200px; 
   font-family: 'Arial', sans-serif;
@@ -40,6 +49,7 @@ body, html {
   }
 
 }
+
 .text-content {
   width: 100%;
   padding: 0 10px;
@@ -59,7 +69,35 @@ body, html {
 
 
 
+@media (max-width:632px)
+{
+#logo{
+  height:80px;
+}
+}
 
+@media(max-width:478px)
+{
+  #logo{
+    margin-left: 0px;
+    height:80px;
+    margin-top: 100px;
+  }
+}
+@media(max-width:345px)
+{
+  #logo{
+    height:70px;
+    margin-top: 100px;
+  }
+}
+
+@media only screen and (min-width:769px) and (max-width:899px)
+{
+#logo{
+  margin-top: 50px;
+}
+}
 /* Media query for smaller devices */
 @media (max-width: 768px) {
   #text-content {
