--- a/src/components/MapComponent/index.css
+++ b/src/components/MapComponent/index.css
@@ -4,6 +4,14 @@
     font-size:35px;
 }
 
+#map-heading{
+  color:#e69a8dff;
+  font-family: Arial, sans-serif;
+  font-size: 25px;
+  margin-bottom: 0px;
+  padding-bottom: 0%;
+  text-align: center;
+}
 .map-container {
    
     display: flex;
@@ -54,6 +62,19 @@
       height: 300px;
     }
 }
+
+@media(max-width:555px)
+{
+  #map-heading{
+    font-size: 20px;
+  }
+}
+@media(max-width:400px)
+{
+  #map-heading{
+    font-size: 18px;
+  }
+}
 @media (max-width: 470px) {
    
   
@@ -81,18 +102,27 @@
     box-shadow: 5px 10px #212020;
     
   }
+
+  .note-text{
+    margin:10px;
+    text-align: justify;
+    margin-top: 20px;
+    font-size: 19.4px;
+  }
+  .note-text a{
+    color:white;
+    text-decoration: none;
+  }
   .request-form-section h2{
     margin-top: 0px;
     color:#e69a8dff;
     font-size: 30px;
   }
   .form-text{
-
-    text-align: left;
     text-align:justify;
-    word-spacing: 5px;
     margin-bottom: 20px;
-    font-size: 20px;
+    font-size: 19.4px;
+    word-break: break-all;
   }
   
   .form-group {
