--- a/src/components/FormComponent/index.css
+++ b/src/components/FormComponent/index.css
@@ -38,6 +38,7 @@ input[type="text"], input[type="email"] {
 }
 
 #form-submit {
+  font-size: 20px;
   border-radius: 10px;
   display: block;
   margin: 20px auto 10px;
@@ -134,4 +135,38 @@ input[type=date], input[type=email], input[type=text], textarea {
 
 .form-container button[type="submit"]:hover {
   background-color:  #e69a8dff; 
+}
+
+
+input[type="file"]::file-selector-button {
+  border:none;
+  padding: 0.2em 0.4em;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #099509;
+  transition: .3s ease;
+  color:white;
+  font-size: 16px;
+
+}
+
+.form-container label input[type="file"] {
+  font-family: Arial, sans-serif; 
+  font-size: 16px; 
+}
+
+
+input[type="file"]::-ms-browse:hover {
+  background-color: #e69a8dff; 
+  border: 2px solid white;
+}
+
+input[type="file"]::-webkit-file-upload-button:hover {
+  background-color: #e69a8dff; 
+  border: 2px solid white
+}
+
+input[type="file"]::file-selector-button:hover {
+  background-color: #e69a8dff; 
+  border: 2px solid white;
 }
