--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ border:0px;
   flex: 1;
 }
 @media (max-width: 800px) {
-  #tweet-news-division {
+  #tweet-news-division { 
     flex-direction: column;
   }
 }
@@ -164,3 +164,10 @@ border:0px;
   }
 }
 
+
+
+@media  (max-width:414px) {
+  #tweet-news-division{
+    width:150%;
+  }
+}
