--- a/src/components/TextImageSection/index.css
+++ b/src/components/TextImageSection/index.css
@@ -53,3 +53,10 @@
     flex-direction: row-reverse; /* Reverse layout for alternate rows */
   }
 }
+
+@media  (max-width:414px) {
+
+.text-image-section{
+  width: 150%;
+}
+}
