--- a/src/components/VideoSection/index.css
+++ b/src/components/VideoSection/index.css
@@ -214,6 +214,13 @@ html, body {
   margin-top: 16px; /* ✅ Custom spacing between QR and badge */
   object-fit: contain;
 }
+.play-store-badge {
+  width: 130px;
+  height: 40px;
+  padding-left: 10px;
+  margin-top: 16px; /* ✅ Custom spacing between QR and badge */
+  object-fit: contain;
+}
 @media (max-width: 450px) {
   .modal-overlay {
   height: 100%;
