--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body, html {
   padding: 0;
   width: 100%;
   height: 100%;
-  background-color: #333; /* Dark background color */
+  background-color: #1e1d1d; /* Dark background color */
   color: #fff; /* Light text color for contrast */
   font-family: 'Arial', sans-serif; /* Optional: Set a default font */
 }
@@ -32,6 +32,11 @@ body, html {
  
 }
 
+.text-content {
+  width: 100%;
+  padding: 0 10px;
+  box-sizing: border-box;
+}
 
 #video {
   flex: 1 1;
@@ -50,11 +55,6 @@ body, html {
 
 }
 
-.text-content {
-  width: 100%;
-  padding: 0 10px;
-  box-sizing: border-box;
-}
 
 
 
