--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,44 @@
 .App {
   text-align: center;
 }
-body, html {
+
+body,
+html {
   text-align: center;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  background-color: #333; /* Dark background color */
-  color: #fff; /* Light text color for contrast */
-  font-family: 'Arial', sans-serif; /* Optional: Set a default font */
+  background-color: #151414;
+  /* Dark background color */
+  color: #fff;
+  /* Light text color for contrast */
+  font-family: 'Arial', sans-serif;
+  /* Optional: Set a default font */
 }
-#logo{
+
+#logo {
   height: 120px;
   margin-right: 10px;
   margin-left: 50px;
   position: relative;
   width: auto;
 }
-#cyano-heading{
+
+#cyano-heading {
   margin-top: 10px;
 }
-#title-heading{
-  margin-bottom: 200px; 
+
+#title-heading {
+  margin-bottom: 200px;
   font-family: 'Arial', sans-serif;
   text-align: left;
 }
+
 #project-overview-container {
   display: flex;
   align-items: flex-start;
- 
+
 }
 
 
@@ -45,7 +54,8 @@ body, html {
   }
 
   #video {
-    margin-top: 10px; /* Adjust margin as needed */
+    margin-top: 10px;
+    /* Adjust margin as needed */
   }
 
 }
@@ -61,79 +71,83 @@ body, html {
 @media (max-width: 767px) {
 
   #video {
-    width:100px;
-    height:100px;
-   
+    width: 100px;
+    height: 100px;
+
   }
 }
 
 
 
-@media (max-width:632px)
-{
-#logo{
-  height:80px;
-}
+@media (max-width:632px) {
+  #logo {
+    height: 80px;
+  }
 }
 
-@media(max-width:478px)
-{
-  #logo{
+@media(max-width:478px) {
+  #logo {
     margin-left: 0px;
-    height:80px;
-    margin-top: 100px;
-  }
-}
-@media(max-width:345px)
-{
-  #logo{
-    height:70px;
+    height: 80px;
     margin-top: 100px;
   }
 }
 
-@media only screen and (min-width:769px) and (max-width:899px)
-{
-#logo{
-  margin-top: 50px;
+@media(max-width:345px) {
+  #logo {
+    height: 70px;
+    margin-top: 100px;
+  }
 }
+
+@media only screen and (min-width:769px) and (max-width:899px) {
+  #logo {
+    margin-top: 50px;
+  }
 }
+
 /* Media query for smaller devices */
 @media (max-width: 768px) {
   #text-content {
-    padding: 10px; /* Adjust padding for smaller devices */
+    padding: 10px;
+    /* Adjust padding for smaller devices */
   }
 
   #text-content p {
-    font-size: 14px; /* Decrease font size for smaller devices */
+    font-size: 14px;
+    /* Decrease font size for smaller devices */
   }
 }
 
-#project-overview-content{
+#project-overview-content {
 
-border:0px;
+  border: 0px;
   padding-top: 0px;
   margin-top: 0px;
-  font-family:  sans-serif;
-  
+  font-family: sans-serif;
+
 }
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-#tweet-news-division{
+#tweet-news-division {
   display: flex;
   flex-direction: row;
 }
-#tweet-news-division > * {
+
+#tweet-news-division>* {
   flex: 1;
 }
+
 @media (max-width: 800px) {
-  #tweet-news-division { 
+  #tweet-news-division {
     flex-direction: column;
   }
 }
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -159,6 +173,7 @@ border:0px;
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -166,8 +181,8 @@ border:0px;
 
 
 
-@media  (max-width:414px) {
-  #tweet-news-division{
-    width:150%;
+@media (max-width:414px) {
+  #tweet-news-division {
+    width: 150%;
   }
 }
